# stoneLearn

./: README  _config.yml  index.html
src/: ipython
src/DeepLearn/: convolutional_mlp.py  load_m.py  test.py  xload_cnn.py
src/caffe/blob/: Makefile  env.sh  main.cpp
src/caffe/hello/: Makefile
src/cifar/: convolutional_mlp.py  loadcifar.py  loadcifar3.py  loadcx.py  logistic_sgd.py  mlp.py  sgd.py  xload_cnn.py
src/cnn/: convolutional_mlp.py
src/com1/: a.php
src/file/: file.php  hi.php
src/hello/: hello.php
src/ipython/mlp/: simple_study.ipynb
src/lstm/demo/: demo.py
src/lstm/keras/: kline.py  klstm.py  kmoon.py  ktest.py  lstm.py  te.py
src/lstm/tensorflow/: htu.py  lstm.py  lstushare.py
src/mkdata/: data_test
src/mlp/: README.md  data01.py  sbp.py  smlp.py  softm.py  test.py  vbp.py
src/mlp_test/mkdata/: data.py  datand.py  keras_e.py  keras_nd.py  mxnet_x.py  viewx.py
src/mlp_test/stone_mlp/: data.py  data01.py  mlps.py  mt.py  (+1 more)
src/modelx01/: tr01.py  tr02.py  tx01.py  tx02.py
src/ndarray/: nd01.py  nd_gup01.py  tofrom_np.py
src/shuse/: e.php  ent.php  g.php  h0  hg.php  hong.txt  lan.txt  shu_1112.txt  shuse.php  shuse.txt  shuse_v.txt  t0  t1
src/stock/: all_dbls.py  all_debug.py  all_ver1127.py  all_ver1214.py  all_ver1214_check.py  alphak.sh  bdls.py  bdpr.py  clusterS.py  d1.py  day.sh  demo.py  down_web.py  downs.py  evalx.py  evalxjd.py  evls.py  jd_test.ipynb  kevalx2.py  kevalx3.py  kevalxjd.py  klstm.py  kt.sh  lstm.py  new11.py  stockd.py  t.sh  testx.py  us.py  ver1127.py
src/tordemo/: CMakeLists.txt  example-app.cpp
(+19 files in other folders)
